--- a/src/app/mechanic-view/sidebar-mechanic/sidebar-mechanic.component.html
+++ b/src/app/mechanic-view/sidebar-mechanic/sidebar-mechanic.component.html
@@ -78,7 +78,7 @@
         Servicios
       </button>
       <button class="text-xl flex w-full bg-white hover:bg-gray-200 text-black font-bold py-2 px-12 rounded-b-3xl" [routerLink]="['/workshop/workshop-mechanics']">
-        Mechanicos
+        Mecánicos
       </button>
     </div>
   }
