--- a/src/app/order-progress/pages/client-progress/client-progress.component.html
+++ b/src/app/order-progress/pages/client-progress/client-progress.component.html
@@ -1,9 +1,9 @@
 
 
-<div class="flex lg:flex-row flex-col lg:mt-28 lg:mb-32 mb-14" *ngFor="let order of orders">
+<div class="flex lg:flex-row flex-col lg:mt-20 lg:mb-20 mb-14" *ngFor="let order of orders">
 
   <!--- Primera columna --->
-  <div class="flex flex-col w-full lg:items-center lg:w-1/2 lg:ml-14 lg:-mr-32">
+  <div class="flex flex-col w-full lg:items-center lg:w-1/2 lg:ml-14 lg:-mr-32 mt-8">
 
     <div class="flex flex-col border border-gray-300 mt-5 p-8 mb-4 justify-center mr-7 ml-7 lg:w-1/2" style="background: #D9D9D9">
       <h2 class="font-bold text-2xl mb-2">Detalle de la Orden de Trabajo</h2>
@@ -11,7 +11,6 @@
       <p class="text-lg mt-2">Nombre: {{ order.nombre }}</p>
       <p class="text-lg mt-2">Dirección: {{ order.direccion }}</p>
       <p class="text-lg mt-2">Teléfono/Celular: {{ order.telefono }}</p>
-      <p class="text-lg mt-2"><strong>Código de Orden: {{ order.codigo }}</strong></p>
     </div>
 
     <div class="flex flex-col lg:mt-10 mr-7 ml-7 lg:w-1/2" >
@@ -29,7 +28,7 @@
 
   </div>
 
-  <div class="flex flex-col w-full lg:w-1/2 mt-2 lg:mr-48 p-5">
+  <div class="flex flex-col w-full lg:w-1/2 lg:mr-48 lg:mt-0 mt-10">
     <app-multi-progress-bar />
 
   </div>
