--- a/src/app/order-progress/pages/employee-progress/employee-progress.component.html
+++ b/src/app/order-progress/pages/employee-progress/employee-progress.component.html
@@ -5,11 +5,10 @@
 
     <div class="flex flex-col border border-gray-300 mt-5 p-8 mb-4 justify-center mr-7 ml-7 lg:w-1/2" style="background: #D9D9D9">
       <h2 class="font-bold text-2xl mb-2">Detalle de la Orden de Trabajo</h2>
-      <p class="font-bold text-xl mb-2">Información del taller</p>
+      <p class="font-bold text-xl mb-2">Información del cliente</p>
       <p class="text-lg mt-2">Nombre:{{ datosOrden.nombre }}</p>
-      <p class="text-lg mt-2">Dirección: {{ datosOrden.direccion }}</p>
+      <p class="text-lg mt-2">correo: {{ datosOrden.gmail}}</p>
       <p class="text-lg mt-2">Teléfono/Celular: {{ datosOrden.telefono }}</p>
-      <p class=" text-xl mt-4"><strong>Código de Orden:</strong> {{ datosOrden.codigo }}</p>
     </div>
 
     <div class="flex flex-col lg:mt-10 mr-7 ml-7 lg:w-1/2">
