--- a/src/app/layout-pages/pages/login-users/login-users.component.html
+++ b/src/app/layout-pages/pages/login-users/login-users.component.html
@@ -28,7 +28,7 @@
 
 
       <div class="flex justify-center">
-        <button type="submit" class=" text-xl text-black rounded-xl px-10 py-3 font-semibold inline-block" style="background: #F7941F">Ingresar</button>
+        <button type="submit" class=" text-xl text-black rounded-xl px-10 py-3 font-semibold inline-block" style="background: #F7941F" (click)="onSubmit">Ingresar</button>
       </div>
 
     </form>
