--- a/src/app/employee-view/pages/order-list-employee/order-list-employee.component.html
+++ b/src/app/employee-view/pages/order-list-employee/order-list-employee.component.html
@@ -55,14 +55,14 @@
       </thead>
 
       <tbody class="w-full">
-      <tr *ngFor="let vehicle of vehicles | paginate: { itemsPerPage: 6, currentPage: p }">
-        <td class="border-gray-400 py-4" style="width: 14.28%;">{{ vehicle.placa }}</td>
-        <td class="border-gray-400 py-4" style="width: 14.28%;">{{ vehicle.fechaRegistro }}</td>
-        <td class="border-gray-400 py-4" style="width: 14.28%;">{{ vehicle.horaRegistro }}</td>
-        <td class="border-gray-400 font-semibold py-4 {{ getColorClass(vehicle.estado) }}" style="width: 14.28%;">{{
-            vehicle.estado }}</td>
+      <tr *ngFor="let order of orderList | paginate: { itemsPerPage: 6, currentPage: p }">
+        <td class="border-gray-400 py-4" style="width: 14.28%;">{{ order.placa }}</td>
+        <td class="border-gray-400 py-4" style="width: 14.28%;">{{ order.fechaRegistro }}</td>
+        <td class="border-gray-400 py-4" style="width: 14.28%;">{{ order.horaRegistro }}</td>
+        <td class="border-gray-400 font-semibold py-4 {{ getColorClass(order.estado) }}" style="width: 14.28%;">{{
+            order.estado }}</td>
         <td class="border-gray-400 py-4" style="width: 14.28%;">
-          <button class="text-white px-2 py-1 rounded-lg" style="background: #F7941F">☰</button>
+          <button class="text-white px-2 py-1 rounded-lg" style="background: #F7941F" (click)="detailOrder(order.id)">☰</button>
         </td>
       </tr>
       </tbody>
@@ -83,12 +83,12 @@
       </thead>
 
       <tbody class="w-full">
-      <tr *ngFor="let vehicle of vehicles | paginate: { itemsPerPage:7, currentPage: p }">
-        <td class="text-xs border-gray-400 py-4" style="width: 20%;">{{ vehicle.placa }}</td>
-        <td class="text-xs border-gray-400 py-4" style="width: 20%;">{{ vehicle.fechaRegistro }}</td>
-        <td class="text-xs border-gray-400 py-4" style="width: 20%;">{{ vehicle.horaRegistro }}</td>
-        <td class="text-xs border-gray-400 font-semibold py-4 {{ getColorClass(vehicle.estado) }}"
-            style="width: 20%;">{{ vehicle.estado }}</td>
+      <tr *ngFor="let order of orderList | paginate: { itemsPerPage:7, currentPage: p }">
+        <td class="text-xs border-gray-400 py-4" style="width: 20%;">{{ order.placa }}</td>
+        <td class="text-xs border-gray-400 py-4" style="width: 20%;">{{ order.fechaRegistro }}</td>
+        <td class="text-xs border-gray-400 py-4" style="width: 20%;">{{ order.horaRegistro }}</td>
+        <td class="text-xs border-gray-400 font-semibold py-4 {{ getColorClass(order.estado) }}"
+            style="width: 20%;">{{ order.estado }}</td>
         <td class="text-xs border-gray-400 py-4" style="width: 20%;">
           <button class="text-white px-2 py-1 rounded-lg" style="background: #F7941F">☰</button>
         </td>
