--- a/src/app/mechanic-view/pages/create-order/create-order.component.html
+++ b/src/app/mechanic-view/pages/create-order/create-order.component.html
@@ -88,14 +88,14 @@
             class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0"
             [(ngModel)]="item.servicio" (ngModelChange)="getMechanicsByService(item.servicio)">
 
-            <option value="0" disabled selected>Servicio</option>
+            <option [ngValue]="0" disabled selected>Servicio</option>
 
-            @if (selectedTipoServicio === 'MANTENIMIENTO') {
+            @if (item.tipo_servicio === 'MANTENIMIENTO') {
 
             <option *ngFor="let servicio of serviciosMantenimiento" [ngValue]="servicio.id">{{ servicio.nombre }}
             </option>
             }
-            @else if (selectedTipoServicio === 'REPARACION') {
+            @else if (item.tipo_servicio === 'REPARACION') {
             <option *ngFor="let servicio of serviciosReparacion" [ngValue]="servicio.id">{{ servicio.nombre }}</option>
             }
           </select>
@@ -104,9 +104,9 @@
             class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0"
             [(ngModel)]="item.mecanico" (click)="selectMechanic(item.mecanico)">
 
-            <option value="0" disabled selected>Mecanico</option>
+            <option [ngValue]="" disabled selected>Mecanico</option>
 
-            <option *ngFor="let mc of mecanicos" [ngValue]="mc.id">{{ mc.nombre }}</option>
+            <option *ngFor="let mc of mecanicos" [ngValue]="mc.id" [selected]="mc.id === item.mecanico">{{ mc.nombre }}</option>
 
           </select>
 
