--- a/src/app/mechanic-view/pages/workshop-services/workshop-services.component.html
+++ b/src/app/mechanic-view/pages/workshop-services/workshop-services.component.html
@@ -1,5 +1,3 @@
-
-
 <div class="flex justify-center items-center mt-12 lg:mt-32 mb-10 lg:mb-28 mr-5 ml-5">
 
   <div class="p-10 text-black  w-full lg:w-4/12" style="background: #D9D9D9">
@@ -14,10 +12,10 @@
         <h3 class="flex text-lg mb-2 font-semibold">Mantenimiento</h3>
         <div class="flex flex-col">
           @for (servicio of accionesMantenimiento; track $index) {
-          <label  class="flex items-center">
-              <input type="checkbox" class="mr-2" (change)="toggleService(servicio.id)">
-              {{ servicio.nombre }}
-            </label>
+          <label class="flex items-center">
+            <input type="checkbox" class="mr-2" (change)="toggleService(servicio.id)">
+            {{ servicio.nombre }}
+          </label>
           }
         </div>
       </div>
@@ -27,10 +25,10 @@
         <h3 class="flex text-lg mb-2 font-semibold">Reparación</h3>
         <div class="flex flex-col">
           @for (servicio of accionesReparacion; track $index) {
-            <label class="flex items-center">
-              <input type="checkbox" class="mr-2" (change)="toggleService(servicio.id)">
-              {{ servicio.nombre }}
-            </label>
+          <label class="flex items-center">
+            <input type="checkbox" class="mr-2" (change)="toggleService(servicio.id)">
+            {{ servicio.nombre }}
+          </label>
           }
         </div>
       </div>
@@ -38,7 +36,8 @@
 
     <!-- Botón de guardar -->
     <div class=" text-center mt-1">
-      <button type="button" class="text-xl mt-5 bg-blue-500 font-semibold text-black px-10 py-3 rounded-lg" style="background: #F7941F" (click)="openModal()">Guardar</button>
+      <button type="button" class="text-xl mt-5 bg-blue-500 font-semibold text-black px-10 py-3 rounded-lg"
+        style="background: #F7941F" (click)="openModal()">Guardar</button>
     </div>
 
   </div>
@@ -49,16 +48,17 @@
 
 @if (showModal){
 
-  <div class="fixed flex top-0 right-0 w-full h-full bg-gray-900 bg-opacity-80 justify-center items-center">
+<div class="fixed flex top-0 right-0 w-full h-full bg-gray-900 bg-opacity-80 justify-center items-center">
 
-    <div class="rounded-xs p-10 w-96" style="background: #B5B7B6">
-      <h3 class="text-2xl mb-4 font-semibold text-center text-black">Los servicios fueron registrados correctamente!</h3>
-      <img src="../../../../assets/img/LogoG_trans.png" alt="Logo" class="ml-2">
+  <div class="rounded-xs p-10 w-96" style="background: #B5B7B6">
+    <h3 class="text-2xl mb-4 font-semibold text-center text-black">Los servicios fueron registrados correctamente!</h3>
+    <img src="../../../../assets/img/LogoG_trans.png" alt="Logo" class="ml-2">
 
-      <!-- Botón de guardar -->
-      <div class="flex items-center justify-center mr-24 ml-24">
-        <button type="button" class="text-xl text-black rounded-xl px-10 py-3 font-semibold inline-block mt-4" style="background: #F7941F" [routerLink]="['/mechanic/workshop-info']" (click)="closeModal()">Aceptar</button>
-      </div>
+    <!-- Botón de guardar -->
+    <div class="flex items-center justify-center mr-24 ml-24">
+      <button type="button" class="text-xl text-black rounded-xl px-10 py-3 font-semibold inline-block mt-4"
+        style="background: #F7941F" [routerLink]="['/mechanic/workshop-info']" (click)="closeModal()">Aceptar</button>
     </div>
   </div>
+</div>
 }
