--- a/src/app/order-progress/pages/multi-progress-bar/multi-progress-bar.component.html
+++ b/src/app/order-progress/pages/multi-progress-bar/multi-progress-bar.component.html
@@ -10,59 +10,59 @@
   <div *ngFor="let order of orderServices" >
     <div class="flex flex-col w-full mt-2 p-5">
       <div class="items-start">
-        <p class="text-lg "><strong>Servicio: </strong>{{ order.servicio }}</p>
-        <p class="text-lg "><strong>Mecánico: </strong>{{ order.mecanico }}</p>
+        <p class="text-lg "><strong>Servicio: </strong>{{ order.nombreServicio }}</p>
+        <p class="text-lg "><strong>Mecánico: </strong>{{ order.nombreMecanico }}</p>
         <div class="flex">
           <p class="text-lg"><strong>Estado:</strong>&nbsp;</p>
-          <p class="text-lg {{ getColorClass(order.estado) }}">{{ order.estado }}</p>
+          <p class="text-lg {{ getColorClass(order.estadoServicio) }}">{{ order.estadoServicio }}</p>
         </div>
       </div>
     </div>
 
     <!--- Barra de progreso --->
 
-    @if(order.serviciospaso.length >=8){
+    @if(order.pasos.length >=8){
 
       <!--- mayores que 8 van pegados a la derecha--->
 
       <div class="main p-4 lg:ml-0 lg:mr-0 ml-5 mr-5 overflow-x-auto">
         <div class="order-progress">
           <ul>
-            <li *ngFor="let service of order.serviciospaso; let i = index" [class.active]="service.completed">
+            <li *ngFor="let service of order.pasos; let i = index" [class.active]="service.completado">
               <div class="bloque1">
-                <div *ngIf="i < order.serviciospaso.length" class="diagonal-text mb-10">
-                  @if (i === 0 || i === order.serviciospaso.length-1){
+                <div *ngIf="i < order.pasos.length" class="diagonal-text mb-10">
+                  @if (i === 0 || i === order.pasos.length-1){
                     <p class="service-name text-white">.</p>
                   }
-                  @if (i < order.serviciospaso.length-1 && i > 0){
-                    <p class="service-name text-black">{{service.name}}</p>
+                  @if (i < order.pasos.length-1 && i > 0){
+                    <p class="service-name text-black">{{service.nombre}}</p>
                   }
                 </div>
               </div>
 
               <div class="bloque2">
                 @if (i === 0){
-                  <div class="progress-ball2" [class.active]="service.completed">
-                    <i class="uil uil-check" *ngIf="service.completed"></i>
+                  <div class="progress-ball2" [class.active]="service.completado">
+                    <i class="uil uil-check" *ngIf="service.completado"></i>
                   </div>
                 }
-                @if(i > 0 && i < order.serviciospaso.length - 1){
-                  <div class="progress" [class.active]="service.completed">
-                    <i class="uil uil-check" *ngIf="service.completed"></i>
+                @if(i > 0 && i < order.pasos.length - 1){
+                  <div class="progress" [class.active]="service.completado">
+                    <i class="uil uil-check" *ngIf="service.completado"></i>
                   </div>
                 }
-                @if(i === order.serviciospaso.length - 1){
-                  <div  class="progress-ball" [class.active]="service.completed">
-                    <i class="uil uil-check" *ngIf="service.completed"></i>
+                @if(i === order.pasos.length - 1){
+                  <div  class="progress-ball" [class.active]="service.completado">
+                    <i class="uil uil-check" *ngIf="service.completado"></i>
                   </div>
                 }
-                @if(i < order.serviciospaso.length){
+                @if(i < order.pasos.length){
                   <div class="mt-2">
                     @if (i === 0 ){
-                      <p class="text-black ml-1.5">{{service.name}}</p>
+                      <p class="text-black ml-1.5">{{service.nombre}}</p>
                     }
-                    @if (i === order.serviciospaso.length-1){
-                      <p class="text-black ml-9">{{service.name}}</p>
+                    @if (i === order.pasos.length-1){
+                      <p class="text-black ml-9">{{service.nombre}}</p>
                     }
                   </div>
                 }
@@ -80,41 +80,41 @@
       <div class="main p-4 lg:ml-0 lg:mr-0 ml-5 mr-5 overflow-x-auto items-center">
         <div class="order-progress">
           <ul>
-            <li *ngFor="let service of order.serviciospaso; let i = index" [class.active]="service.completed">
+            <li *ngFor="let service of order.pasos; let i = index" [class.active]="service.completado">
               <div class="bloque1">
-                <div *ngIf="i < order.serviciospaso.length" class="diagonal-text mb-10">
-                  @if (i === 0 || i === order.serviciospaso.length-1){
+                <div *ngIf="i < order.pasos.length" class="diagonal-text mb-10">
+                  @if (i === 0 || i === order.pasos.length-1){
                     <p class="service-name text-white">.</p>
                   }
-                  @if (i < order.serviciospaso.length-1 && i > 0){
-                    <p class="service-name text-black">{{service.name}}</p>
+                  @if (i < order.pasos.length-1 && i > 0){
+                    <p class="service-name text-black">{{service.nombre}}</p>
                   }
                 </div>
               </div>
 
               <div class="bloque2">
                 @if (i === 0){
-                  <div class="progress-ball2" [class.active]="service.completed">
-                    <i class="uil uil-check" *ngIf="service.completed"></i>
+                  <div class="progress-ball2" [class.active]="service.completado">
+                    <i class="uil uil-check" *ngIf="service.completado"></i>
                   </div>
                 }
-                @if(i > 0 && i < order.serviciospaso.length - 1){
-                  <div class="progress" [class.active]="service.completed">
-                    <i class="uil uil-check" *ngIf="service.completed"></i>
+                @if(i > 0 && i < order.pasos.length - 1){
+                  <div class="progress" [class.active]="service.completado">
+                    <i class="uil uil-check" *ngIf="service.completado"></i>
                   </div>
                 }
-                @if(i === order.serviciospaso.length - 1){
-                  <div  class="progress-ball" [class.active]="service.completed">
-                    <i class="uil uil-check" *ngIf="service.completed"></i>
+                @if(i === order.pasos.length - 1){
+                  <div  class="progress-ball" [class.active]="service.completado">
+                    <i class="uil uil-check" *ngIf="service.completado"></i>
                   </div>
                 }
-                @if(i < order.serviciospaso.length){
+                @if(i < order.pasos.length){
                   <div class="mt-2">
                     @if (i === 0 ){
-                      <p class="text-black ml-1.5">{{service.name}}</p>
+                      <p class="text-black ml-1.5">{{service.nombre}}</p>
                     }
-                    @if (i === order.serviciospaso.length-1){
-                      <p class="text-black ml-9">{{service.name}}</p>
+                    @if (i === order.pasos.length-1){
+                      <p class="text-black ml-9">{{service.nombre}}</p>
                     }
                   </div>
                 }
@@ -135,59 +135,59 @@
   <div *ngFor="let order of orderServices" >
     <div class="flex flex-col w-full mt-2 p-5">
       <div class="items-start">
-        <p class="text-lg "><strong>Servicio: </strong>{{ order.servicio }}</p>
-        <p class="text-lg "><strong>Mecánico: </strong>{{ order.mecanico }}</p>
+        <p class="text-lg "><strong>Servicio: </strong>{{ order.nombreServicio }}</p>
+        <p class="text-lg "><strong>Mecánico: </strong>{{ order.nombreMecanico }}</p>
         <div class="flex">
           <p class="text-lg"><strong>Estado:</strong>&nbsp;</p>
-          <p class="text-lg {{ getColorClass(order.estado) }}">{{ order.estado }}</p>
+          <p class="text-lg {{ getColorClass(order.estadoServicio) }}">{{ order.estadoServicio }}</p>
         </div>
       </div>
     </div>
 
     <!--- Barra de progreso --->
 
-    @if(order.serviciospaso.length >=8){
+    @if(order.pasos.length >=8){
 
       <!--- mayores que 8 van pegados a la derecha--->
 
       <div class="main p-4 lg:ml-0 lg:mr-0 ml-5 mr-5 overflow-x-auto">
         <div class="order-progress">
           <ul>
-            <li *ngFor="let service of order.serviciospaso; let i = index" [class.active]="service.completed">
+            <li *ngFor="let service of order.pasos; let i = index" [class.active]="service.completado">
               <div class="bloque1">
-                <div *ngIf="i < order.serviciospaso.length" class="diagonal-text mb-10">
-                  @if (i === 0 || i === order.serviciospaso.length-1){
+                <div *ngIf="i < order.pasos.length" class="diagonal-text mb-10">
+                  @if (i === 0 || i === order.pasos.length-1){
                     <p class="service-name text-white">.</p>
                   }
-                  @if (i < order.serviciospaso.length-1 && i > 0){
-                    <p class="service-name text-black">{{service.name}}</p>
+                  @if (i < order.pasos.length-1 && i > 0){
+                    <p class="service-name text-black">{{service.nombre}}</p>
                   }
                 </div>
               </div>
 
               <div class="bloque2">
                 @if (i === 0){
-                  <div class="progress-ball2" [class.active]="service.completed">
-                    <i class="uil uil-check" *ngIf="service.completed"></i>
+                  <div class="progress-ball2" [class.active]="service.completado">
+                    <i class="uil uil-check" *ngIf="service.completado"></i>
                   </div>
                 }
-                @if(i > 0 && i < order.serviciospaso.length - 1){
-                  <div class="progress" [class.active]="service.completed">
-                    <i class="uil uil-check" *ngIf="service.completed"></i>
+                @if(i > 0 && i < order.pasos.length - 1){
+                  <div class="progress" [class.active]="service.completado">
+                    <i class="uil uil-check" *ngIf="service.completado"></i>
                   </div>
                 }
-                @if(i === order.serviciospaso.length - 1){
-                  <div  class="progress-ball" [class.active]="service.completed">
-                    <i class="uil uil-check" *ngIf="service.completed"></i>
+                @if(i === order.pasos.length - 1){
+                  <div  class="progress-ball" [class.active]="service.completado">
+                    <i class="uil uil-check" *ngIf="service.completado"></i>
                   </div>
                 }
-                @if(i < order.serviciospaso.length){
+                @if(i < order.pasos.length){
                   <div class="mt-2">
                     @if (i === 0 ){
-                      <p class="text-black ml-1.5">{{service.name}}</p>
+                      <p class="text-black ml-1.5">{{service.nombre}}</p>
                     }
-                    @if (i === order.serviciospaso.length-1){
-                      <p class="text-black ml-9">{{service.name}}</p>
+                    @if (i === order.pasos.length-1){
+                      <p class="text-black ml-9">{{service.nombre}}</p>
                     }
                   </div>
                 }
@@ -205,41 +205,41 @@
       <div class="main p-4 lg:ml-0 lg:mr-0 ml-5 mr-5 overflow-x-auto">
         <div class="order-progress">
           <ul>
-            <li *ngFor="let service of order.serviciospaso; let i = index" [class.active]="service.completed">
+            <li *ngFor="let service of order.pasos; let i = index" [class.active]="service.completado">
               <div class="bloque1">
-                <div *ngIf="i < order.serviciospaso.length" class="diagonal-text mb-10">
-                  @if (i === 0 || i === order.serviciospaso.length-1){
+                <div *ngIf="i < order.pasos.length" class="diagonal-text mb-10">
+                  @if (i === 0 || i === order.pasos.length-1){
                     <p class="service-name text-white">.</p>
                   }
-                  @if (i < order.serviciospaso.length-1 && i > 0){
-                    <p class="service-name text-black">{{service.name}}</p>
+                  @if (i < order.pasos.length-1 && i > 0){
+                    <p class="service-name text-black">{{service.nombre}}</p>
                   }
                 </div>
               </div>
 
               <div class="bloque2">
                 @if (i === 0){
-                  <div class="progress-ball2" [class.active]="service.completed">
-                    <i class="uil uil-check" *ngIf="service.completed"></i>
+                  <div class="progress-ball2" [class.active]="service.completado">
+                    <i class="uil uil-check" *ngIf="service.completado"></i>
                   </div>
                 }
-                @if(i > 0 && i < order.serviciospaso.length - 1){
-                  <div class="progress" [class.active]="service.completed">
-                    <i class="uil uil-check" *ngIf="service.completed"></i>
+                @if(i > 0 && i < order.pasos.length - 1){
+                  <div class="progress" [class.active]="service.completado">
+                    <i class="uil uil-check" *ngIf="service.completado"></i>
                   </div>
                 }
-                @if(i === order.serviciospaso.length - 1){
-                  <div  class="progress-ball" [class.active]="service.completed">
-                    <i class="uil uil-check" *ngIf="service.completed"></i>
+                @if(i === order.pasos.length - 1){
+                  <div  class="progress-ball" [class.active]="service.completado">
+                    <i class="uil uil-check" *ngIf="service.completado"></i>
                   </div>
                 }
-                @if(i < order.serviciospaso.length){
+                @if(i < order.pasos.length){
                   <div class="mt-2">
                     @if (i === 0 ){
-                      <p class="text-black ml-1.5">{{service.name}}</p>
+                      <p class="text-black ml-1.5">{{service.nombre}}</p>
                     }
-                    @if (i === order.serviciospaso.length-1){
-                      <p class="text-black ml-9">{{service.name}}</p>
+                    @if (i === order.pasos.length-1){
+                      <p class="text-black ml-9">{{service.nombre}}</p>
                     }
                   </div>
                 }
