feature/new-list-services-create-order

--- a/src/app/client-view/pages/register-vehicles/register-vehicles.component.html
+++ b/src/app/client-view/pages/register-vehicles/register-vehicles.component.html
@@ -79,13 +79,13 @@
 <div class="fixed flex top-0 right-0 w-full h-full bg-gray-900 bg-opacity-80 justify-center items-center">
 
   <div class="rounded-xs p-10 w-96" style="background: #B5B7B6">
-    <button class="top-2 ml-72 mb-5" (click)="closeModal()">
-      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-black hover:text-gray-800" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+    <button class="top-2 ml-72 mb-8" (click)="closeModal()">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-black hover:text-gray-800 -mt-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
       </svg>
     </button>
-    <h3 class="text-2xl mb-4 font-semibold text-center " style="color: #d82733">Registrar mi vehículo</h3>
-    <p class="text-xl mb-6 font-semibold text-center">Información del vehículo</p>
+    <h3 class="text-2xl mb-4 font-semibold text-center -mt-8" style="color: #d82733">Registrar mi vehículo</h3>
+    <p class="text-xl mb-10 font-semibold text-center">Información del vehículo</p>
 
     <!-- Campos de registro -->
 
