--- a/src/app/mechanic-view/pages/create-order/create-order.component.html
+++ b/src/app/mechanic-view/pages/create-order/create-order.component.html
@@ -65,9 +65,7 @@
         <h2 class="text-2xl mt-3 mb-3 ">Información del servicio</h2>
       </div>
 
-      <!-- Opcion de registro del servicio-->
-
-
+      <!-- Opcion de registro del servicio
       <div class="bg-white p-6 rounded-lg text-black overflow-y-auto mb-5" style="height: 250px;">
 
         <div class="flex lg:flex-row flex-col mb-3" *ngFor="let item of selectedServices; let i = index">
@@ -119,6 +117,10 @@
 
         </div>
       </div>
+      -->
+
+
+
 
       <div class="mx-auto mb-2">
         <button type="button"
