--- a/src/app/order-progress/pages/employee-progress/employee-progress.component.html
+++ b/src/app/order-progress/pages/employee-progress/employee-progress.component.html
@@ -27,9 +27,9 @@
   </div>
 
   <!--- segunda columna --->
-  <div class="flex flex-col w-full lg:w-1/2 mt-2 lg:mr-48 p-5">
+  <div class="flex flex-col w-full lg:w-1/2 lg:-mt-10 lg:mr-48 p-5">
     <div class="items-center text-center">
-      <h2 class="font-bold text-2xl lg:mr-10 mb-2">Monitoreo </h2>
+      <h2 class="font-bold text-2xl lg:mr-10 mb-2 lg:mb-12">Monitoreo </h2>
     </div>
     <div class="items-start lg:ml-0 ml-5">
       <p class="text-lg "><strong>Servicio: </strong>{{ datosOrden.servicio }}</p>
