feature/create-order

--- a/src/app/mechanic-view/pages/workshop-mechanics/workshop-mechanics.component.html
+++ b/src/app/mechanic-view/pages/workshop-mechanics/workshop-mechanics.component.html
@@ -31,7 +31,7 @@
           <button class="text-white px-2 py-1 rounded-lg" style="background: #F7941F" (click)="toggleServicios()">mostrar</button>
             @if (showServices) {
 
-              <div class="fixed flex top-0 right-0 w-full h-full bg-gray-900 bg-opacity-80 justify-center items-center">
+              <!-- <div class="fixed flex top-0 right-0 w-full h-full bg-gray-900 bg-opacity-80 justify-center items-center"> -->
 
                 <div class="rounded-xs p-10 w-96" style="background: #B5B7B6">
                   <h3 class="text-2xl mb-4 font-semibold text-center text-black">Lista de servicios del mecanico seleccionado</h3>
@@ -43,7 +43,7 @@
                     <button type="button" class="text-xl text-black rounded-xl px-10 py-3 font-semibold inline-block mt-4" style="background: #F7941F"  (click)="toggleServicios()">Aceptar</button>
                   </div>
                 </div>
-              </div>
+              <!-- </div> -->
             }
         </td>
         <td class="border-gray-400 py-4" style="width: 20%;">
