--- a/src/app/mechanic-view/pages/create-order/create-order.component.html
+++ b/src/app/mechanic-view/pages/create-order/create-order.component.html
@@ -2,7 +2,7 @@
 <div class="flex flex-col justify-center items-center mt-5 mb-2.5">
 
   <img src="../../../../assets/img/LogoEmpresaR.png" alt="Logo" class="h-32" [routerLink]="['/workshop/workshop-info']"
-       style="cursor: pointer;">
+    style="cursor: pointer;">
 
 
   <!-- Opcion de registro lg-->
@@ -65,59 +65,96 @@
         <h2 class="text-2xl mt-3 mb-3 ">Información del servicio</h2>
       </div>
 
-      <!-- Opcion de registro del servicio
-      <div class="bg-white p-6 rounded-lg text-black overflow-y-auto mb-5" style="height: 250px;">
+      <!-- Opcion de registro del servicio -->
+      <div class="bg-white p-6 rounded-lg text-black overflow-y-auto mb-5 lg:block hidden" style="height: 250px;">
 
-        <div class="flex lg:flex-row flex-col mb-3" *ngFor="let item of selectedServices; let i = index">
+        <div *ngFor="let item of selectedServices; let i = index" class="flex lg:flex-row flex-col mb-3">
 
-          <select
-
-            class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0"
-            [(ngModel)]="item.tipo_servicio" (ngModelChange)="onTypeOfService($event)">
-
+          <select [(ngModel)]="item.tipo_servicio"
+            class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0">
             <option value="" disabled selected>Tipo de servicio</option>
-
-            <option *ngFor="let tservicio of tipoServicio" [ngValue]="tservicio"
-              [selected]="tservicio === item.tipo_servicio">{{ tservicio }}</option>
-
+            <option *ngFor="let tipo of tipoServicio">{{ tipo }}</option>
           </select>
 
-          <select
-            class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0"
-            [(ngModel)]="item.servicio" (ngModelChange)="getMechanicsByService(item.servicio)">
-
-            <option [ngValue]="0" disabled selected>Servicio</option>
-
-            @if (item.tipo_servicio === 'MANTENIMIENTO') {
-
-            <option *ngFor="let servicio of serviciosMantenimiento" [ngValue]="servicio.id">{{ servicio.nombre }}
-            </option>
-            }
-            @else if (item.tipo_servicio === 'REPARACION') {
-            <option *ngFor="let servicio of serviciosReparacion" [ngValue]="servicio.id">{{ servicio.nombre }}</option>
-            }
+          <select [(ngModel)]="item.servicioMecanico.servicioId"
+            class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0">
+            <option value="0" disabled selected>Servicio</option>
+            <ng-container *ngIf="item.tipo_servicio === 'MANTENIMIENTO'; else reparacion">
+              <option *ngFor="let servicio of serviciosMantenimiento" [value]="servicio.id">{{ servicio.nombre }}
+              </option>
+            </ng-container>
+            <ng-template #reparacion>
+              <option *ngFor="let servicio of serviciosReparacion" [value]="servicio.id">{{ servicio.nombre }}</option>
+            </ng-template>
           </select>
 
-          <select
-            class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0"
-            [(ngModel)]="item.mecanico" (click)="selectMechanic(item.mecanico)">
-
-            <option [ngValue]="" disabled selected>Mecanico</option>
-
-            <option *ngFor="let mc of mecanicos" [ngValue]="mc.id" [selected]="mc.id === item.mecanico">{{ mc.nombre }}</option>
-
+          <select [(ngModel)]="item.servicioMecanico.mecanicoId"
+            class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0">
+            <option value="0" disabled selected>Mecanico</option>
+            <ng-container *ngIf="item.servicioMecanico.servicioId">
+              <option *ngFor="let mecanico of obtenerMecanicosPorServicio(item.servicioMecanico.servicioId)" [value]="mecanico.id">{{
+                mecanico.nombre }}</option>
+            </ng-container>
           </select>
 
-          <div class="text-xl w-full flex justify-between">
-            <button *ngIf="i === selectedServices.length - 1" (click)="addRow()" class="text-xl text-black rounded-full px-2 py-2 font-semibold inline-block" style="background: #F7941F;">+</button>
-
-            <button *ngIf="selectedServices.length > 1" (click)="removeRow(i)" class="text-xl text-black rounded-full px-2 py-2 font-semibold inline-block" style="background: #F7941F;">-</button>
+          <div class="text-xl flex justify-center ">
+            <button *ngIf="selectedServices.length > 1" (click)="removeRow(i)"
+              class="text-xl text-black rounded-full px-5 py-2 font-semibold hidden lg:inline-block"
+              style="background: #D9D9D9">-</button>
           </div>
-
-
         </div>
       </div>
-      -->
+
+
+      <!---tamaño xs--->
+
+      <div class="bg-white p-6 rounded-lg text-black  mb-5 lg:hidden">
+
+        <div *ngFor="let item of selectedServices; let i = index" class="flex lg:flex-row flex-col mb-3">
+
+          <select [(ngModel)]="item.tipo_servicio"
+            class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0">
+            <option value="" disabled selected>Tipo de servicio</option>
+            <option *ngFor="let tipo of tipoServicio">{{ tipo }}</option>
+          </select>
+
+          <select [(ngModel)]="item.servicioMecanico.servicioId"
+            class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0">
+            <option value="0" disabled selected>Servicio</option>
+            <ng-container *ngIf="item.tipo_servicio === 'MANTENIMIENTO'; else reparacion">
+              <option *ngFor="let servicio of serviciosMantenimiento" [value]="servicio.id">{{ servicio.nombre }}
+              </option>
+            </ng-container>
+            <ng-template #reparacion>
+              <option *ngFor="let servicio of serviciosReparacion" [value]="servicio.id">{{ servicio.nombre }}</option>
+            </ng-template>
+          </select>
+
+          <select [(ngModel)]="item.servicioMecanico.mecanicoId"
+            class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0">
+            <option value="0" disabled selected>Mecanico</option>
+            <ng-container *ngIf="item.servicioMecanico.servicioId">
+              <option *ngFor="let mecanico of obtenerMecanicosPorServicio(item.servicioMecanico.servicioId)"
+                [value]="mecanico.id">{{
+                mecanico.nombre }}</option>
+            </ng-container>
+          </select>
+
+          <div class="flex lg:flex-row flex-col lg:w-96 lg:mx-auto">
+            <button *ngIf="selectedServices.length > 1" (click)="removeRow(i)"
+              class="text-xl text-black rounded-xl px-10 py-2 font-semibold inline-block mb-1 lg:mb-0 mt-3 lg: lg:hidden"
+              style="background: #D9D9D9">Eliminar servicio</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="flex lg:flex-row flex-col justify-center lg:ml-2 lg:mr-48 ml-5 mr-5">
+        <div *ngFor="let item of selectedServices; let i = index" class="flex lg:flex-row flex-col">
+          <button *ngIf="i === selectedServices.length - 1" (click)="addRow()"
+            class="text-xl text-black rounded-xl px-8 py-3 font-semibold inline-block lg:mb-0 lg:mt-0"
+            style="background: #F7941F;">Agregar servicio</button>
+        </div>
+      </div>
 
 
 
